# VideoToAscii

./: .gitignore  CMakeLists.txt  README.md
include/: OutputConsoleGreyScale.h  RenderFrameStrategy.h  VideoReader.h  load_frame.h  video_reader.h  view.h
lib/ffmpeg/: CMakeLists.txt
src/: OutputConsoleGreyScale.cpp  VideoReader.cpp  load_frame.cpp  main.cpp  old_main.cpp  video_reader.cpp  view.cpp
